<resources>
    <string name="app_name">Luna</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="textGreen">Green</string>
    <string name="textRed">Red</string>
    <string name="textBlue">Blue</string>
    <string name="setcolor">Set Color</string>
    <string name="nav_color_picker">Color Picker</string>
    <string name="nav_color_pattern">Color Pattern</string>
    <string name="nav_my_colors">My Colors</string>
    <string name="nav_settings">Settings</string>

    <string-array name="modes_array">
        <item>Flash</item>
        <item>Up/Down</item>
        <item>Turn</item>
    </string-array>
    <string name="delay">Delay</string>
    <string name="invert">Invert</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="selectLuna">Select Luna</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="pick_device">Select your Lunas</string>
    <string name="automatically_connect">Connect to \'My Lunas\' automatically</string>
    <string name="add_devices">Add selected devices to \'My Lunas\'</string>
    <string name="rescan">Rescan</string>
    <string name="scanning">Scanning…</string>
    <string name="scanningInfo">Scanning for known Lunas… Make sure your Luna is near you and turned on.</string>
    <string name="connection_failed">Could not connect</string>
    <string name="battery">Battery</string>
    <string name="add_device2">Add to \'My Lunas\'</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="remove_device">Remove from \'My Lunas\'</string>
    <string name="move_element">move element</string>
    <string name="compy_color">compy color</string>
    <string name="clear_all">Clear all</string>
    <string name="pick_mode">Pick mode</string>
    <string name="max_colors_warnings">Cannot add more than 10 colors.</string>
</resources>
